--- a/package.json
+++ b/package.json
@@ -7,19 +7,20 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "bootstrap": "^4.4.1",
+    "bootstrap": "^4.5.0",
     "chart.js": "^2.9.3",
     "font-awesome": "^4.7.0",
     "history": "^4.10.1",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.0.1",
     "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.13.1",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.1",
     "reactstrap": "^8.4.1",
     "redux-logger": "^4.0.0",
-    "redux-thunk": "^2.3.0",
-    "react-scripts": "3.4.1"
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
